--- a/package.json
+++ b/package.json
@@ -1,16 +1,7 @@
 {
   "name": "fastcopy",
-  "module": "index.ts",
-  "type": "module",
+  "private": true,
   "workspaces": [
     "app/*"
-  ],
-  "devDependencies": {
-    "@types/bun": "latest",
-    "drizzle-kit": "^0.20.17",
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "drizzle-orm": "^0.30.9"
-  }
+  ]
 }
