--- a/app/client/package.json
+++ b/app/client/package.json
@@ -9,7 +9,9 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
+  "devDependencies": {
+    "server": "workspace:*",
+    "@fontsource-variable/pixelify-sans": "^5.0.3",
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.1",
     "@astrojs/tailwind": "^5.1.0",
@@ -21,8 +23,5 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
-  },
-  "devDependencies": {
-    "server": "workspace:*"
   }
 }
