--- a/app/server/package.json
+++ b/app/server/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun build src/index.ts --target bun --outdir ./dist",
+    "start": "bun index.js"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.0.2",
+    "@elysiajs/static": "^1.0.3",
     "@elysiajs/swagger": "^1.0.4",
     "elysia": "latest",
     "redis": "^4.6.13"
+  },
+  "exports": {
+     ".": "./src/index.ts"
   },
   "devDependencies": {
     "bun-types": "latest"
