--- a/app/server/package.json
+++ b/app/server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
-    "build": "bun build src/index.ts --target bun --outdir ./dist",
-    "start": "bun index.js"
+    "dev": "NODE_ENV=development bun run --watch src/index.ts",
+    "build": "bun build src/index.ts --target bun --outdir ./dist"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.0.2",
@@ -15,7 +14,7 @@
     "redis": "^4.6.13"
   },
   "exports": {
-     ".": "./src/index.ts"
+    ".": "./src/index.ts"
   },
   "devDependencies": {
     "bun-types": "latest"
