--- a/app/server/package.json
+++ b/app/server/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development bun run --watch src/index.ts",
-    "build": "bun build src/index.ts --target bun --outdir ./dist"
+    "build": "bun build src/index.ts --target bun --outdir dist --minify"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.0.2",
